@@ -1,0 +1,60 @@
+/*
+ * =============================================================================
+ * 
+ *   Copyright (c) 2011-2012, The THYMELEAF team (http://www.thymeleaf.org)
+ * 
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *   you may not use this file except in compliance with the License.
+ *   You may obtain a copy of the License at
+ * 
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *   See the License for the specific language governing permissions and
+ *   limitations under the License.
+ * 
+ * =============================================================================
+ */
+package org.thymeleaf.fragment;
+
+import org.thymeleaf.util.Validate;
+
+
+
+
+/**
+ * 
+ * @author Daniel Fern&aacute;ndez
+ * 
+ * @since 2.0.9
+ *
+ */
+public abstract class AbstractFragmentSpec implements IFragmentSpec {
+    
+    private final String stringRepresentation;
+    private final String templateName;
+    
+    
+    public AbstractFragmentSpec(final String stringRepresentation, final String templateName) {
+        super();
+        Validate.notEmpty(stringRepresentation, "String Representation cannot be null or empty");
+        Validate.notEmpty(templateName, "Template name cannot be null or empty");
+        this.stringRepresentation = stringRepresentation;
+        this.templateName = templateName;
+    }
+
+    
+
+    public String getStringRepresentation() {
+        return this.stringRepresentation;
+    }
+
+
+    public String getTemplateName() {
+        return this.templateName;
+    }
+
+}
+
