@@ -1,0 +1,63 @@
+/*
+ * =============================================================================
+ * 
+ *   Copyright (c) 2011-2012, The THYMELEAF team (http://www.thymeleaf.org)
+ * 
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *   you may not use this file except in compliance with the License.
+ *   You may obtain a copy of the License at
+ * 
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *   See the License for the specific language governing permissions and
+ *   limitations under the License.
+ * 
+ * =============================================================================
+ */
+package org.thymeleaf.fragment;
+
+import org.thymeleaf.Arguments;
+import org.thymeleaf.Template;
+import org.thymeleaf.TemplateProcessingParameters;
+import org.thymeleaf.dom.Node;
+
+
+
+
+
+/**
+ * 
+ * @author Daniel Fern&aacute;ndez
+ * 
+ * @since 2.0.9
+ *
+ */
+public final class CompleteTemplateFragmentSpec extends AbstractFragmentSpec {
+    
+    public CompleteTemplateFragmentSpec(final String stringRepresentation, 
+            final String fragmentTemplateName) {
+        super(stringRepresentation, fragmentTemplateName);
+    }
+
+    
+    
+    
+    public final Node extractFragment(final Arguments arguments) {
+
+        final TemplateProcessingParameters fragmentTemplateProcessingParameters = 
+                new TemplateProcessingParameters(
+                        arguments.getConfiguration(), getTemplateName(), arguments.getContext());
+        
+        final Template parsedFragmentTemplate = 
+                arguments.getTemplateRepository().getTemplate(fragmentTemplateProcessingParameters);
+        
+        return parsedFragmentTemplate.getDocument();
+        
+    }
+
+    
+}
+
